Bug 476015 - Merging non-animated layers creates animated layer
Summary: Merging non-animated layers creates animated layer
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
: 476038 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-10-23 18:51 UTC by Freya Lupen
Modified: 2023-10-24 08:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Freya Lupen 2023-10-23 18:51:22 UTC
SUMMARY
As reported on KA, since commit d259fa10 "Fix merge down of an non-animated layer to an animated one", merging non-animated layers creates an animated layer.

STEPS TO REPRODUCE
1. Create two non-animated layers, merge the top one down.

OBSERVED RESULT
Result layer is animated.

EXPECTED RESULT
Result layer is not animated.

SOFTWARE/OS VERSIONS
Krita 5.3.0-prealpha a0db80d17a
Comment 1 Dmitry Kazakov 2023-10-24 08:10:35 UTC
Git commit fbdc805616e035d8d6e64a27fbc7e0949aa0f831 by Dmitry Kazakov.
Committed on 24/10/2023 at 10:10.
Pushed by dkazakov into branch 'master'.

Don't make merged layer animated if none of the sources were

M  +1    -1    libs/image/kis_layer_utils.cpp

https://invent.kde.org/graphics/krita/-/commit/fbdc805616e035d8d6e64a27fbc7e0949aa0f831
Comment 2 Dmitry Kazakov 2023-10-24 08:11:13 UTC
Git commit b28ef2488dfb77e90eb59b9b17881eb0ec837746 by Dmitry Kazakov.
Committed on 24/10/2023 at 10:11.
Pushed by dkazakov into branch 'krita/5.2'.

Don't make merged layer animated if none of the sources were

M  +1    -1    libs/image/kis_layer_utils.cpp

https://invent.kde.org/graphics/krita/-/commit/b28ef2488dfb77e90eb59b9b17881eb0ec837746
Comment 3 Dmitry Kazakov 2023-10-24 08:56:41 UTC
*** Bug 476038 has been marked as a duplicate of this bug. ***