Don't make merged layer animated if none of the sources were

BUG:476015